# xarm_recordme

./: .gitignore  .gitmodules  Dockerfile  info.txt
opencvdocker/: Dockerfile  info.txt
opencvdocker/opncvproj/: CMakeLists.txt
opencvdocker/opncvproj/src/: serial.cpp
opncvproj/: CMakeLists.txt
opncvproj/src/: control.cpp  ros_kin.cpp  serial.h  servoCommands.h  trajectory.cpp  yolo.cpp  yolo.h
python_code/: client.py  demo_serial.py  myproject.py  phone_ip_cam.py
